--- a/templates/base.html
+++ b/templates/base.html
@@ -685,7 +685,8 @@ ul li { display: inline-block; margin-right: 10px; }
                             <div class="nk-widget">
                                 <h4 class="nk-widget-title"><span class="text-main-1">Contact</span> With Us</h4>
                                 <div class="nk-widget-content">
-                                    <form action="php/ajax-contact-form.php" class="nk-form nk-form-ajax">
+                                    <form method="POST"  action='/contacts/'   class="">
+                                      {% csrf_token %}
                                         <div class="row vertical-gap sm-gap">
                                             <div class="col-md-6">
                                                 <input type="email" class="form-control required" name="email" placeholder="Email *">
