--- a/templates/games/index.html
+++ b/templates/games/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="nk-feature-cont">
                     <h3 class="nk-feature-title"><a href="#">{{cat.name}}</a></h3>
-                    <h4 class="nk-feature-title text-main-1"><a href="#">View Games</a></h4>
+                    <h4 class="nk-feature-title text-main-1"><a href="/game-accounts-list/?category={{cat.name}}"">View Games</a></h4>
                 </div>
             </div>
         </div>
