--- a/templates/base.html
+++ b/templates/base.html
@@ -473,9 +473,87 @@ ul li { display: inline-block; margin-right: 10px; }
             filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0)
         }
 
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 9999; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+        }
+        
+        /* Modal Content */
+        .modal-content {
+          margin: auto;
+          display: block;
+          width: 80%;
+          max-width: 700px;
+          position: relative;
+        }
+        
+        /* Modal Image */
+        .modal-content img {
+          width: 100%;
+        }
+        
+        /* Previous & Next Buttons */
+        .prev, .next {
+          cursor: pointer;
+          position: absolute;
+          top: 50%;
+          width: auto;
+          margin-top: -30px;
+          padding: 16px;
+          color: white;
+          font-weight: bold;
+          font-size: 30px;
+          transition: 0.6s ease;
+          border-radius: 0 3px 3px 0;
+          user-select: none;
+          background-color: rgba(0, 0, 0, 0.8);
+        }
+        
+        /* Position the "next button" to the right */
+        .next {
+          right: 0;
+          border-radius: 3px 0 0 3px;
+        }
+        
+        /* On hover, add a black background color with a little bit see-through */
+        .prev:hover, .next:hover {
+          background-color: rgba(0, 0, 0, 0.4);
+        }
+        
+        /* Close Button */
+        .close {
+          position: absolute;
+          top: 10px;
+          right: 20px;
+          color: white;
+          font-size: 35px;
+          font-weight: bold;
+          transition: 0.6s ease;
+        }
+        
+        /* On hover, add a grey background color */
+        .close:hover {
+          color: #bbb;
+        }
+        
+        /* Add Animation */
+        .modal-content, .prev, .next {
+          -webkit-animation-name: zoom;
+          -webkit-animation-duration: 0.6s;
+          animation-name: zoom;
+          animation-duration: 0.6s;
 
 
-          
+       
     </style>
     
       
@@ -806,7 +884,7 @@ ul li { display: inline-block; margin-right: 10px; }
                             <div class="text-center">
                                 <h4 class="mb-0"><span class="text-main-1">Login</span> / Register</h4>
                                
-                                <a href="{% url 'users:profile' %}" style="position: relative; top: -40px; left: -180px; right: 70px; border-radius: 5px; box-shadow: 0 0 5px rgb(255, 255, 255); transition: transform 0.2s ease-in-out; background-color: transparent; color: white;">{% if user %} Profile {% endif %}</a>
+                                <a href="{% url 'users:profile' %}" style="position: relative; top: -40px; left: -130px; right: 110px; border-radius: 5px; box-shadow: 0 0 5px rgb(255, 255, 255); transition: transform 0.2s ease-in-out; background-color: transparent; color: white;">{% if user %} Profile {% endif %}</a>
                             
                                 <p>{{user.email}}</p>
                                 <form action="#" class="nk-form text-white">
@@ -953,7 +1031,101 @@ ul li { display: inline-block; margin-right: 10px; }
     }
     }                   
      
-            </script>
+
+
+
+
+    var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal
+var modalImg = document.getElementById("modalImage");
+function openModal(url) {
+  modal.style.display = "block";
+  modalImg.src = url;
+  showSlides(slideIndex);
+}
+
+// Close the modal
+var span = document.getElementsByClassName("close")[0];
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// Next/previous controls
+var slideIndex = 1;
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("modal-content");
+  var dots = document.getElementsByClassName("modal-pagination")[0];
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = slideIndex - 1; i < slideIndex + 2; i++) {
+    if (i >= 0 && i < slides.length) {
+      slides[i].style.display = "block";
+      dots.innerHTML = i+1 + " / " + slides.length;
+    }
+  }
+}
+
+
+
+
+$(document).ready(function() {
+  $('#review-form').submit(function(event) {
+    event.preventDefault();
+    var form = $(this);
+    var url = form.attr('action');
+    var data = form.serialize();
+
+    // kullanıcının oturum açıp açık olmadığını kontrol et
+    $.ajax({
+      url: '/check_login_status/',
+      success: function(response) {
+        if (response.logged_in) {
+          // kullanıcı giriş yapmışsa formu submit et
+          if (validateForm()) {
+            $.ajax({
+              type: 'POST',
+              url: url,
+              data: data,
+              dataType: 'json',
+              success: function(response) {
+                if (response.success) {
+                  var commentHtml = '<div class="nk-comment"><div class="nk-comment-meta"><img src="' + response.img + '" alt="Witch Murder" class="rounded-circle" width="35"> by <a href="#">' + response.name + '</a> in ' + response.date + '</div><div class="nk-comment-text"><p>' + response.message + '</p></div></div>';
+                  $('.nk-comments').prepend(commentHtml);
+                  form.trigger('reset');
+                }
+              }
+            });
+          }
+        } else {
+          // kullanıcı giriş yapmamışsa login sayfasına yönlendir
+          window.location.href = '/users/login/?next=' + encodeURIComponent(window.location.href);
+        }
+      }
+    });
+  });
+});
+
+function validateForm() {
+  var messageField = $('textarea[name="message"]');
+  var message = messageField.val().trim();
+  if (message === '') {
+    return false;
+  }
+  return true;
+}
+
+
+</script>
              
                 
                 
